added all the ui tests